修改图片模块功能